# msh

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cmd.h  config.h  config.h.in  history.h  path.h  tokenize.h
src/: cmd.c  history.c  main.c  path.c  tokenize.c
